# gastos

./: .gitignore.txt  AGENTS.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  categorias.py  dashboard.py  health.py  importacion.py  metodos_pago.py  movimientos.py  reglas.py  tipos.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  entities.py
backend/app/routers/: __init__.py  health.py
backend/app/schemas/: __init__.py  categorias.py  dashboard.py  importacion.py  metodos_pago.py  movimientos.py  reglas.py  tipos.py
backend/app/services/: dashboard.py  importador_csv.py  movimientos.py  reglas.py
backend/tests/: conftest.py  test_dashboard.py  test_filtros.py  test_health.py  test_importacion.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.jsx  router.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: Card.jsx  DashboardCharts.jsx  DashboardFilters.jsx  ImportMappingForm.jsx  ImportPreviewTable.jsx  KpiCards.jsx  Layout.jsx  MovimientosTable.jsx  SimpleTable.jsx
frontend/src/hooks/: useMovimientos.js
frontend/src/pages/: CategoriasPage.jsx  DashboardPage.jsx  ImportPage.jsx  MovimientosPage.jsx  ReglasPage.jsx
gastos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
