[project]
name = "gastos"
version = "0.1.0"
description = "Aplicación de gestión de gastos domésticos"
authors = [
    { name = "Equipo gastos" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<0.112.0",
    "uvicorn[standard]>=0.29.0,<0.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0"
]

[tool.uvicorn]
app = "backend.app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
