[build-system]
# Declaramos explícitamente el backend de construcción para evitar dependencias
# implícitas y mejorar la compatibilidad con herramientas modernas. Reducimos
# la restricción de versión para soportar entornos sin acceso a PyPI.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gastos"
version = "0.1.0"
description = "Aplicación de gestión de gastos domésticos"
authors = [
    { name = "Equipo gastos" }
]
readme = "README.md"
requires-python = ">=3.9.6,<3.10"
dependencies = [
    "fastapi>=0.110.0,<0.112.0",
    "uvicorn[standard]>=0.29.0,<0.31.0",
    "sqlalchemy>=2.0.0,<2.1.0",
    "pandas>=2.2.0,<2.3.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.0,<2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0",
    "ruff>=0.4.0",
    "black>=24.3.0",
]

[tool.setuptools]
# Indicamos que el directorio raíz aloja los paquetes Python para asegurar su
# inclusión al construir el proyecto.
package-dir = {"" = "."}

[tool.setuptools.packages.find]
# Buscamos todos los subpaquetes bajo el espacio de nombres `backend` para que
# queden disponibles tras la instalación editable.
where = ["."]
include = ["backend*", "backend"]

[tool.uvicorn]
app = "backend.app.main:app"
host = "0.0.0.0"
port = 8000
reload = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]
